# RK_LVGL_DEMO

./: README.md
rk_demo/: CMakeLists.txt  S10lv_demo  lv_toast.c  lv_toast.h  main.c  main.h  ui_btnmatrix.c  ui_btnmatrix.h  ui_common.c  ui_common.h  ui_resource.h
rk_demo/asr/: asr.c  asr.h  asr_logo.c  audio.c
rk_demo/asr/pcm/: hao_de.pcm  huan_yin.pcm  huan_yin_hui_jia.pcm  wo_zai.pcm  yi_guan_bi.pcm  yi_kai_qi.pcm  zai_jian.pcm  zheng_zai_zhi_xing.pcm
rk_demo/audio_algorithm/configs/: config_aivqe.json  config_wakeup.json
rk_demo/audio_algorithm/include/: rkaudio_preprocess.h
rk_demo/furniture_control/: coffee_machine.c  furniture_control_ui.c  icebox_ui.c  player_ui.c
rk_demo/home/: home_ui.c
rk_demo/include/: RK_encode.h  RkBle.h  RkBleClient.h  RkBtBase.h  RkBtHfp.h  RkBtPan.h  RkBtSink.h  RkBtSource.h  RkBtSpp.h  Rk_socket_app.h  Rk_softap.h  Rk_wifi.h  utility.h
rk_demo/intercom_homepage/: ui_intercom_homepage.c
rk_demo/intercom_homepage/intercom_call/: ui_intercom_call.c
rk_demo/intercom_homepage/video_monitor/: ui_monitor.c
rk_demo/layout/: tile_layout.c  tile_layout.h
rk_demo/resource/: bg_pic_0.sjpg  bg_pic_1.sjpg  bg_pic_2.sjpg  bg_pic_3.sjpg
rk_demo/rockit/: audio_client.c  audio_in.c  audio_out.c  audio_server.c  audio_server.h
rk_demo/setting/: bt_ui.c  display_ui.c  language_and_date_ui.c  setting_ui.c  volume_ui.c  wallpaper_ui.c  wifi_none.c  wifi_ui.c  wifi_wep.c  wifi_wpa.c  wifi_wpa3.c
rk_demo/smart_home/: app_aircond.c  app_aircond.h  app_date.c  app_date.h  app_music.c  app_music.h  app_scene.c  app_scene.h  app_switch.c  app_switch.h  app_weather.c  app_weather.h  smart_home_ui.c  smart_home_ui.h
rk_demo/wifibt/: bt_server.c  wifi_server.c  wifibt.c  wifibt.h
